error / component / data fetching / meta

--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "typescript": "^5.5.4",
+    "vue-tsc": "^2.1.6"
   }
 }
